logs/dag_id=hooks_demo/run_id=manual__2023-11-16T10:03:15.392583+00:00/task_id=transfer/attempt=1.log
[2023-11-16T15:33:19.954+0530] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: hooks_demo.transfer manual__2023-11-16T10:03:15.392583+00:00 [queued]>
[2023-11-16T15:33:19.959+0530] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: hooks_demo.transfer manual__2023-11-16T10:03:15.392583+00:00 [queued]>
[2023-11-16T15:33:19.959+0530] {taskinstance.py:1359} INFO - Starting attempt 1 of 2
[2023-11-16T15:33:19.969+0530] {taskinstance.py:1380} INFO - Executing <Task(PythonOperator): transfer> on 2023-11-16 10:03:15.392583+00:00
[2023-11-16T15:33:19.972+0530] {standard_task_runner.py:57} INFO - Started process 143300 to run task
[2023-11-16T15:33:19.975+0530] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'hooks_demo', 'transfer', 'manual__2023-11-16T10:03:15.392583+00:00', '--job-id', '4720', '--raw', '--subdir', 'DAGS_FOLDER/hooks.py', '--cfg-path', '/tmp/tmpd5qix8sc']
[2023-11-16T15:33:19.975+0530] {standard_task_runner.py:85} INFO - Job 4720: Subtask transfer
[2023-11-16T15:33:19.998+0530] {task_command.py:415} INFO - Running <TaskInstance: hooks_demo.transfer manual__2023-11-16T10:03:15.392583+00:00 [running]> on host harika-Latitude-5511
[2023-11-16T15:33:20.132+0530] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Airflow' AIRFLOW_CTX_DAG_ID='hooks_demo' AIRFLOW_CTX_TASK_ID='transfer' AIRFLOW_CTX_EXECUTION_DATE='2023-11-16T10:03:15.392583+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-16T10:03:15.392583+00:00'
[2023-11-16T15:33:20.136+0530] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-11-16T15:33:20.148+0530] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-11-16T15:33:20.157+0530] {taskinstance.py:1935} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/harika/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/harika/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/home/harika/airflow/dags/hooks.py", line 36, in transfer_function
    source_cursor.execute(use_database_query)
psycopg2.errors.SyntaxError: syntax error at or near "USE"
LINE 1: USE airflow;
        ^

[2023-11-16T15:33:20.160+0530] {taskinstance.py:1398} INFO - Marking task as UP_FOR_RETRY. dag_id=hooks_demo, task_id=transfer, execution_date=20231116T100315, start_date=20231116T100319, end_date=20231116T100320
[2023-11-16T15:33:20.166+0530] {standard_task_runner.py:104} ERROR - Failed to execute job 4720 for task transfer (syntax error at or near "USE"
LINE 1: USE airflow;
        ^
; 143300)
[2023-11-16T15:33:20.187+0530] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-16T15:33:20.205+0530] {taskinstance.py:2776} INFO - 0 downstream tasks scheduled from follow-on schedule check
